--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@socket.io/cluster-adapter": "^0.2.0",
     "@socket.io/sticky": "^1.0.1",
     "@vue/eslint-config-standard": "^5.0.0",
-    "@waxio/waxjs": "git://github.com/worldwide-asset-exchange/waxjs#develop",
+    "@waxio/waxjs": "https://github.com/worldwide-asset-exchange/waxjs#develop",
     "anchor-link": "^3.4.1",
     "anchor-link-browser-transport": "^3.2.5",
     "apexcharts": "^3.25.0",
